Se mejora el tablero y se conecta el view con el modelo